--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cloudinary": "^2.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -29,6 +28,7 @@
     "lint-staged": "^15.1.0",
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
